tests/fail/Complement.java
package fail;

public class Complement {
	public static void main(String[] args) {
		System.out.println(~true);
	}
}
